# gonx

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml  release.yml
cmake/: GonxCompilerFlags.cmake  OnnxRuntime.cmake
docs/: api.md  architecture.md  building.md  platforms.md  troubleshooting.md
example/: main.gd  main.tscn  project.godot
example/addons/gonx/: gonx.gdextension
include/gonx/core/: environment.hpp  error.hpp  provider.hpp  session.hpp  tensor_spec.hpp  type_conversion.hpp
include/gonx/godot/: ort_model_metadata.hpp  ort_provider_config.hpp  ort_session_node.hpp  ort_tensor_spec.hpp
src/core/: environment.cpp  provider.cpp  session.cpp  tensor_spec.cpp  type_conversion.cpp
src/godot/: ort_model_metadata.cpp  ort_provider_config.cpp  ort_session_node.cpp  ort_tensor_spec.cpp  register_types.cpp
src/platform/: platform.cpp
tests/: CMakeLists.txt
tests/fixtures/: add_floats.onnx  dynamic_batch.onnx  generate_test_models.py  identity_float.onnx  int64_add.onnx
tests/integration/: test_inference.cpp  test_session.cpp
tests/unit/: test_error.cpp  test_provider.cpp  test_tensor_spec.cpp  test_type_conversion.cpp
